tests/baselines/reference/emitArrowFunctionWhenUsingArguments15(alwaysstrict=false,target=es5).errors.txt
emitArrowFunctionWhenUsingArguments15.ts(5,22): error TS2496: The 'arguments' object cannot be referenced in an arrow function in ES5. Consider using a standard function expression.


==== emitArrowFunctionWhenUsingArguments15.ts (1 errors) ====
    function f() {
        var arguments = "hello";
        if (Math.random()) {
            const arguments = 100;
            return () => arguments;
                         ~~~~~~~~~
!!! error TS2496: The 'arguments' object cannot be referenced in an arrow function in ES5. Consider using a standard function expression.
        }
    }